# Neurovox

./: .gitignore  LICENSE  README.md  RELEASE.md  compare_gaze_models.py  pyproject.toml  requirements.txt
.github/workflows/: release.yml
scripts/: bootstrap.sh  pyinstaller_entry.py  windows_entry.py
scripts/macos/: Info.plist
scripts/release/: README-Linux.txt
src/LLM/: __init__.py  __main__.py  audio_platform.py  completion.py  env.py  openai_backend.py  stt_whisper.py
src/stroke_eye_monitor/: __init__.py  __main__.py  app.py  assets.py  audio_voice.py  cli_args.py  config.py  data_collection.py  detector.py  drawing.py  gaze_calibration.py  gaze_mapping.py  keyboard_overlay.py  metrics.py
src/stroke_eye_monitor/core/: __init__.py  assets.py  detector.py  frame_result.py  gaze_mapping.py  metrics.py
src/stroke_eye_monitor/modes/: __init__.py  calibration_fit_plot.py  data_collection.py  gaze_calibration.py
src/stroke_eye_monitor/pipeline/: __init__.py  live.py
src/stroke_eye_monitor/ui/: __init__.py  brand_theme.py  drawing.py  keyboard_overlay.py
src/stroke_eye_monitor/utils/: __init__.py  fps.py  frame.py  opencv_canvas.py  threaded_capture.py
